Fixed overflow on mobile

--- a/src/components/About/style.scss
+++ b/src/components/About/style.scss
@@ -13,6 +13,7 @@ $dark: #36363e;
     position: relative;
     z-index: -5;
     padding: 30px;
+    overflow-x: hidden;
     
     .section__title {
             display: flex;
