--- a/src/components/Banner/styles.module.css
+++ b/src/components/Banner/styles.module.css
@@ -1,6 +1,5 @@
 .banner {
    position: relative;
-   background: #f8f8f9;
    background: #FEF5F0;
    display: flex;
    flex-wrap: wrap;
